--- a/3_colloq1/rus/ultimate_guide/numpy_approximation_numpy.ipynb
+++ b/3_colloq1/rus/ultimate_guide/numpy_approximation_numpy.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.optimize import curve_fit"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9,17 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -98,48 +99,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Модуль упругости Янга (E): 0.0031384491033687517\n",
-      "Удлинение пружины при силе 7 Н: [0.02013483 0.02012564 0.02011907 0.02011382 0.02010331]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from scipy.optimize import curve_fit\n",
+    "\n",
     "\n",
     "# Исходные данные\n",
-    "force = np.array([1, 2, 3, 4, 5])  # сила в Н\n",
-    "delta_x = np.array([3, 6.5, 9, 11, 15])  # изменение длины в мм\n",
+    "x = np.array([1, 2, 3, 4, 5])\n",
+    "y = np.array([3, 8, 20, 50, 125])\n",
     "\n",
-    "# Переводим в метры\n",
-    "delta_x_m = delta_x / 1000\n",
+    "# Определение экспоненциальной функции\n",
+    "def exponential_func(x, a, b):\n",
+    "    return a * np.exp(b * x)\n",
     "\n",
-    "# Функция для аппроксимации\n",
-    "def model_function(force, A, k):\n",
-    "    return A / k * np.abs(force - k * delta_x_m) ** k\n",
-    "\n",
-    "# Аппроксимация\n",
-    "params, covariance = curve_fit(model_function, force, delta_x_m)\n",
+    "# Аппроксимация с использованием curve_fit\n",
+    "params, covariance = curve_fit(exponential_func, x, y)\n",
     "\n",
     "# Извлекаем параметры\n",
-    "A, k = params\n",
+    "a, b = params\n",
     "\n",
-    "# Выводим модуль упругости Янга (E)\n",
-    "E = A / k\n",
-    "print(\"Модуль упругости Янга (E):\", E)\n",
+    "# Генерация новых данных для гладкой кривой\n",
+    "x_smooth = np.linspace(min(x), max(x), 100)\n",
+    "y_smooth = exponential_func(x_smooth, a, b)\n",
     "\n",
-    "# Сила в 7 Н\n",
-    "force_7N = 7\n",
-    "# Удлинение пружины при силе 7 Н\n",
-    "delta_x_7N = model_function(force_7N, A, k)\n",
-    "print(\"Удлинение пружины при силе 7 Н:\", delta_x_7N)\n"
+    "# Визуализация\n",
+    "plt.scatter(x, y, label='Исходные данные')\n",
+    "plt.plot(x_smooth, y_smooth, label='Экспоненциальная аппроксимация', color='red')\n",
+    "plt.legend()\n",
+    "plt.show()\n"
    ]
   }
  ],
