--- a/3_colloq1/rus/ultimate_guide/SD_algorithms.ipynb
+++ b/3_colloq1/rus/ultimate_guide/SD_algorithms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,12 +42,14 @@
     "**Тело метода (итеративное применение):** На $ k $-ой итерации у нас есть\n",
     "$ x_{k+1} = x_k - \\gamma \\nabla f(x_k) $\n",
     "\n",
-    "**Критерий остановки:** По окончании каждой итерации проверяем условие $ \\|\\nabla f(x_k)\\| \\leq \\varepsilon $. Когда это условие выполняется или когда мы достигаем максимального допустимого числа итераций, мы прекращаем выполнение алгоритма."
+    "**Критерий остановки:** По окончании каждой итерации проверяем условие $ \\|\\nabla f(x_k)\\| \\leq \\varepsilon $. Когда это условие выполняется или когда мы достигаем максимального допустимого числа итераций, мы прекращаем выполнение алгоритма.\n",
+    "\n",
+    "$\\gamma$ (шаг обучения): Значение gamma обычно выбирается в диапазоне от 0.1 до 0.9. Если ваш шаг обучения слишком большой, алгоритм может не сойтись, и, наоборот, если слишком мал, сходимость может быть медленной. Попробуйте начать с относительно небольшого значения, например, 0.1, и увеличивайте его, пока алгоритм не начнет сходиться.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +112,7 @@
        "(array([-1.78658039e-09, -5.95526798e-11]), 24)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +182,7 @@
        "(array([6.10570401e-09, 2.92681603e-73]), 72)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +259,7 @@
        "(array([-1.06181367e-04,  2.05860890e-05]), 72)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
