--- a/3_colloq1/rus/ultimate_guide/one_dim_opt_methods.ipynb
+++ b/3_colloq1/rus/ultimate_guide/one_dim_opt_methods.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,18 +45,18 @@
     "**Метод Ньютона-Рапсона** — это численный метод решения уравнений, который использует итерационный процесс для приближенного нахождения корня уравнения. Алгоритм метода следующий:\n",
     "\n",
     "1. **Начальный выбор:**\n",
-    "   - Выбирается начальное приближение \\(x_0\\) к корню уравнения.\n",
+    "   - Выбирается начальное приближение $x_0$ к корню уравнения.\n",
     "\n",
     "2. **Итерационный процесс:**\n",
-    "   - На каждом шаге \\(n\\) вычисляется следующее приближение \\(x_{n+1}\\) по формуле:\n",
+    "   - На каждом шаге $n$ вычисляется следующее приближение $x_{n+1}$ по формуле:\n",
     "\n",
-    "\\[\n",
+    "$$\n",
     "x_{n+1} = x_n - \\frac{f(x_n)}{f'(x_n)}\n",
-    "\\]\n",
+    "$$\n",
     "\n",
     "   где:\n",
-    "   - \\(f(x_n)\\) — значение функции в точке \\(x_n\\),\n",
-    "   - \\(f'(x_n)\\) — значение производной функции в точке \\(x_n\\).\n",
+    "   - $f(x_n)$ — значение функции в точке $x_n$,\n",
+    "   - $f'(x_n)$ — значение производной функции в точке $x_n$.\n",
     "\n",
     "3. **Обновление:**\n",
     "   - Процесс повторяется, и каждый раз вычисляется новое приближение корня.\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -135,18 +135,18 @@
     "**Метод секущих (метод хорд)** — это численный метод решения уравнений, аппроксимирующий корень путем построения хорды (отрезка) на графике функции и использования ее для приближенного определения корня. Алгоритм метода следующий:\n",
     "\n",
     "1. **Начальный выбор:**\n",
-    "   - Выбираются две начальные точки \\(x_0\\) и \\(x_1\\), близкие к корню уравнения.\n",
+    "   - Выбираются две начальные точки $x_0$ и $x_1$, близкие к корню уравнения.\n",
     "\n",
     "2. **Итерационный процесс:**\n",
-    "   - Строится хорда между точками \\((x_0, f(x_0))\\) и \\((x_1, f(x_1))\\).\n",
-    "   - Новая аппроксимация корня \\(x_2\\) находится как пересечение хорды с осью \\(x\\).\n",
+    "   - Строится хорда между точками $(x_0, f(x_0))$ и $(x_1, f(x_1))$.\n",
+    "   - Новая аппроксимация корня $x_2$ находится как пересечение хорды с осью $x$.\n",
     "\n",
-    "\\[\n",
+    "$$\n",
     "x_2 = x_1 - \\frac{f(x_1) \\cdot (x_1 - x_0)}{f(x_1) - f(x_0)}\n",
-    "\\]\n",
+    "$$\n",
     "\n",
     "3. **Обновление:**\n",
-    "   - Точки \\(x_0\\) и \\(x_1\\) обновляются: \\(x_0 = x_1\\), \\(x_1 = x_2\\).\n",
+    "   - Точки $x_0$ и $x_1$ обновляются: $x_0 = x_1$, $x_1 = x_2$.\n",
     "\n",
     "4. **Повторение:**\n",
     "   - Процесс повторяется до сходимости (достаточного приближения к корню) или до выполнения другого критерия останова.\n",
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -224,26 +224,26 @@
     "**Метод Фибоначчи** — это численный метод оптимизации, который используется для нахождения минимума (или максимума) функции в заданном интервале. Алгоритм метода включает следующие шаги:\n",
     "\n",
     "1. **Выбор начальных точек:**\n",
-    "   - Задаются начальные границы интервала \\([a, b]\\) и точность \\(\\varepsilon\\).\n",
+    "   - Задаются начальные границы интервала $[a, b]$ и точность $\\varepsilon$.\n",
     "\n",
     "2. **Инициализация ряда Фибоначчи:**\n",
-    "   - Находится такое число \\(n\\), что \\(F_n \\geq \\frac{b - a}{\\varepsilon}\\), где \\(F_n\\) — \\(n\\)-е число Фибоначчи.\n",
-    "   - Выбираются начальные точки \\(x_1\\) и \\(x_2\\) внутри интервала так, чтобы длина интервала была равна \\(\\frac{b - a}{F_n}\\).\n",
+    "   - Находится такое число $n$, что $F_n \\geq \\frac{b - a}{\\varepsilon}$, где $F_n$ — $n$-е число Фибоначчи.\n",
+    "   - Выбираются начальные точки $x_1$ и $x_2$ внутри интервала так, чтобы длина интервала была равна $\\frac{b - a}{F_n}$.\n",
     "\n",
     "3. **Итерационный процесс:**\n",
-    "   - На каждом шаге процесса точки \\(x_1\\) и \\(x_2\\) обновляются в зависимости от того, какая из подинтервалов \\([a, x_2]\\) или \\([x_1, b]\\) содержит минимум (максимум) функции.\n",
-    "   - Длина выбранного подинтервала уменьшается в соответствии с последовательностью чисел Фибоначчи: \\(F_n\\) умножается на \\(\\frac{F_{n-2}}{F_{n-1}}\\).\n",
+    "   - На каждом шаге процесса точки $x_1$ и $x_2$ обновляются в зависимости от того, какая из подинтервалов $[a, x_2]$ или $[x_1, b]$ содержит минимум (максимум) функции.\n",
+    "   - Длина выбранного подинтервала уменьшается в соответствии с последовательностью чисел Фибоначчи: $F_n$ умножается на $\\frac{F_{n-2}}{F_{n-1}}$.\n",
     "   - Процесс повторяется до достижения заданной точности.\n",
     "\n",
     "4. **Завершение:**\n",
-    "   - Процесс завершается, когда длина текущего интервала становится меньше или равной \\(\\varepsilon\\).\n",
+    "   - Процесс завершается, когда длина текущего интервала становится меньше или равной $\\varepsilon$.\n",
     "\n",
     "Метод Фибоначчи основан на идее последовательного уточнения интервала, содержащего оптимальное решение, и может быть использован для оптимизации унимодальных функций. Однако, в сравнении с некоторыми другими методами оптимизации, метод Фибоначчи может требовать больше вычислительных ресурсов."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -325,21 +325,21 @@
     "**Метод Золотого сечения** — это численный метод оптимизации, используемый для нахождения локального минимума (или максимума) унимодальной функции в заданном интервале. Алгоритм метода включает следующие шаги:\n",
     "\n",
     "1. **Выбор начальных точек:**\n",
-    "   - Задаются начальные границы интервала \\([a, b]\\) и точность \\(\\varepsilon\\).\n",
+    "   - Задаются начальные границы интервала $[a, b]$ и точность $\\varepsilon$.\n",
     "\n",
     "2. **Инициализация точек:**\n",
-    "   - Выбираются две промежуточные точки \\(x_1\\) и \\(x_2\\) внутри интервала так, чтобы отношение длин отрезков \\([a, x_2]\\) и \\([x_1, b]\\) было равно золотому сечению, т.е.,\n",
+    "   - Выбираются две промежуточные точки $x_1$ и $x_2$ внутри интервала так, чтобы отношение длин отрезков $[a, x_2]$ и $[x_1, b]$ было равно золотому сечению, т.е.,\n",
     "\n",
-    "\\[\n",
+    "$$\n",
     "\\frac{b - x_2}{x_2 - a} = \\frac{x_2 - a}{b - x_1} = \\phi\n",
-    "\\]\n",
+    "$$\n",
     "\n",
-    "где \\(\\phi\\) — золотое сечение, приближенно равное 1.618.\n",
+    "где $\\phi$ — золотое сечение, приближенно равное 1.618.\n",
     "\n",
     "3. **Итерационный процесс:**\n",
-    "   - Оценивается значение функции в точках \\(f(x_1)\\) и \\(f(x_2)\\).\n",
-    "   - Сравниваются значения функции в точках \\(x_1\\) и \\(x_2\\), и один из концов интервала сужается в сторону, где функция принимает меньшее значение.\n",
-    "   - Процесс повторяется, пока длина текущего интервала становится меньше или равной \\(\\varepsilon\\).\n",
+    "   - Оценивается значение функции в точках $f(x_1)$ и $f(x_2)$.\n",
+    "   - Сравниваются значения функции в точках $x_1$ и $x_2$, и один из концов интервала сужается в сторону, где функция принимает меньшее значение.\n",
+    "   - Процесс повторяется, пока длина текущего интервала становится меньше или равной $\\varepsilon$.\n",
     "\n",
     "4. **Завершение:**\n",
     "   - Процесс завершается, когда достигается заданная точность.\n",
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
