--- a/3_colloq1/rus/ultimate_guide/approximation_numpy.ipynb
+++ b/3_colloq1/rus/ultimate_guide/approximation_numpy.ipynb
@@ -50,24 +50,42 @@
    "source": [
     "# Ошибки\n",
     "\n",
-    "1. **Максимальная ошибка (Infinity Norm):**\n",
-    "   $$ E_\\infty(f) = \\max_{1 < k < n} |f(x_k) - y_k| $$  \n",
-    "   Эта формула представляет собой максимальное отклонение предсказанных значений от фактических значений на точках данных.\n",
+    "**Обозначения**\n",
+    "- $ n $ - количество наблюдений,\n",
+    "- $ y_i $ - фактическое значение,\n",
+    "- $ \\hat{y}_i $ - предсказанное значение для функции апроксимации $f (x_i) $.\n",
     "\n",
-    "2. **Средняя ошибка (Mean Absolute Error):**\n",
-    "   $$ E_1(f) = \\frac{1}{n} \\sum_{k=1}^{n} |f(x_k) - y_k| $$  \n",
-    "   Здесь мы находим среднюю абсолютную разницу между предсказанными значениями и фактическими значениями.\n",
-    "\n",
-    "3. **Среднеквадратичная ошибка (Mean Squared Error):**\n",
-    "   $$ E_2(f) = \\sqrt{\\frac{1}{n} \\sum_{k=1}^{n} |f(x_k) - y_k|^2} $$  \n",
-    "   Эта формула представляет собой среднеквадратичное отклонение предсказанных значений от фактических значений.\n",
-    "4. **Абсолютная ошибка (Absolute Error):**\n",
-    "   $$ E_A(x_k) = |f(x_k) - y_k| $$\n",
+    "## Абсолютные ошибки\n",
+    "1. **Абсолютная ошибка (Absolute Error):**\n",
+    "   $$ E_A(x_i) = |\\hat{y}_i - y_i| $$\n",
     "   Эта формула представляет собой абсолютное отклонение предсказанных значений от фактических значений в точке данных $x_k$.\n",
     "\n",
-    "5. **Относительная ошибка (Relative Error):**\n",
-    "   $$ E_R(x_k) = \\frac{|f(x_k) - y_k|}{|y_k|} \\times 100\\% $$ \n",
-    "   Эта формула измеряет относительное отклонение предсказанных значений от фактических значений в точке данных $x_k$, выраженное в процентах. Она учитывает масштаб фактических значений для более объективной оценки ошибки."
+    "2. **Максимальная ошибка (Infinity Norm):**\n",
+    "   $$ E_\\infty(f) = \\max_{1 < i < n} |\\hat{y}_i - y_i| $$  \n",
+    "   Эта формула представляет собой максимальное отклонение предсказанных значений от фактических значений на точках данных.\n",
+    "\n",
+    "3. **Средняя ошибка (Mean Absolute Error):**\n",
+    "   $$ E_1(f) = \\text{MAE} = \\frac{1}{n} \\sum_{i=1}^{n} |\\hat{y}_i - y_i| $$  \n",
+    "   Здесь мы находим среднюю абсолютную разницу между предсказанными значениями и фактическими значениями.\n",
+    "\n",
+    "4. **Среднеквадратичная ошибка (Mean Squared Error):**\n",
+    "   $$ E_2(f) = \\text{MSE} = \\frac{1}{n} \\sum_{i=1}^{n} (\\hat{y}_i - y_i)^2 $$  \n",
+    "   Эта формула представляет собой среднеквадратичное отклонение предсказанных значений от фактических значений.\n",
+    "\n",
+    "5. **Корень из среднеквадратичной ошибки (Root Mean Squared Error, RMSE):** \n",
+    "    Квадратный корень из MSE. \n",
+    "    $$ RMSE = \\sqrt{MSE} = \\sqrt{\\frac{1}{n} \\sum_{i=1}^{n} (\\hat{y}_i - y_i )^2} $$\n",
+    "\n",
+    "## Относительные ошибки\n",
+    "1. **Относительная ошибка (Relative Error):**\n",
+    "   $$ E_R(x_i) = \\frac{|\\hat{y}_i - y_i|}{|y_i|} \\times 100\\% $$   \n",
+    "   Эта формула измеряет относительное отклонение предсказанных значений от фактических значений в точке данных $x_i$, выраженное в процентах. Она учитывает масштаб фактических значений для более объективной оценки ошибки.\n",
+    "\n",
+    "2. **Сложные относительные ошибки** \n",
+    "    Если мы хотим найти любую из вышеперечисленных относительных ошибок мы делим ее на модуль среднего значение от реальных значений:\n",
+    "    $$ |\\bar{y}| = |\\frac{1}{n} \\sum_{i=1}^{n} y_i| $$\n",
+    "    Например: \n",
+    "    $$ Realtive MAE = \\frac{|MAE|}{|\\bar{y}|} = \\frac {\\frac{1}{n} \\sum_{i=1}^{n} |\\hat{y}_i - y_i|}{{|\\bar{y}|}} = \\frac {\\frac{1}{n} \\sum_{i=1}^{n} |\\hat{y}_i - y_i|}{{|\\sum_{i=1}^{n} y_i|}} $$"
    ]
   },
   {
@@ -662,8 +680,8 @@
     "def zadatak1(x,y):\n",
     "    if len(x) != len(y):\n",
     "        raise ValueError('Векторы не одинаковой длины')\n",
-    "    p = np.polyfit(x,y,1)\n",
-    "    return p\n",
+    "\n",
+    "    return np.polyfit(x,y,1)\n",
     "\n",
     "x = np.array([2, 3, 4, 5, 7, 9, 10, 11, 13, 14])\n",
     "y = np.array([0.25, 1.25, 0.1, 3.25, 3, 2, 4, 5.5, 6.5, 5.75])\n",
@@ -685,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -721,11 +739,7 @@
     "    aps_er3 = stat.mean(abs(y-yp3))\n",
     "    aps_er4 = stat.mean(abs(y-yp4))\n",
     "    \n",
-    "    if aps_er3 < aps_er4:\n",
-    "        p = p3\n",
-    "    else:\n",
-    "        p = p4\n",
-    "    return p\n",
+    "    return p3 if aps_er3 < aps_er4 else p4\n",
     "\n",
     "x = np.array([2, 3, 4, 5, 7, 9, 10, 11, 13, 14])\n",
     "y = np.array([0.25, 1.25, 0.1, 3.25, 3, 2, 4, 5.5, 6.5, 5.75])\n",
