--- a/3_colloq1/rus/1_one_dim_opt/1_one_dim_opt_methods.ipynb
+++ b/3_colloq1/rus/1_one_dim_opt/1_one_dim_opt_methods.ipynb
@@ -51,12 +51,12 @@
     "   - На каждом шаге $n$ вычисляется следующее приближение $x_{n+1}$ по формуле:\n",
     "\n",
     "$$\n",
-    "x_{n+1} = x_n - \\frac{f(x_n)}{f'(x_n)}\n",
+    "x_{n+1} = x_n - \\frac{f'(x_n)}{f''(x_n)}\n",
     "$$\n",
     "\n",
     "   где:\n",
-    "   - $f(x_n)$ — значение функции в точке $x_n$,\n",
-    "   - $f'(x_n)$ — значение производной функции в точке $x_n$.\n",
+    "   - $f'(x_n)$ — значение первой производной функции в точке $x_n$,\n",
+    "   - $f''(x_n)$ — значение первой производной функции в точке $x_n$.\n",
     "\n",
     "3. **Обновление:**\n",
     "   - Процесс повторяется, и каждый раз вычисляется новое приближение корня.\n",
@@ -132,18 +132,26 @@
    "metadata": {},
    "source": [
     "# 2. Метод секущих\n",
-    "**Метод секущих (метод хорд)** — это численный метод решения уравнений, аппроксимирующий корень путем построения хорды (отрезка) на графике функции и использования ее для приближенного определения корня. Алгоритм метода следующий:\n",
+    "**Метод секущих (метод хорд)** — это численный метод решения уравнений, аппроксимирующий корень путем построения хорды (отрезка) на графике функции и использования ее для приближенного определения корня. \n",
+    "\n",
+    "Основное различие между методом секущих и методом Ньютона-Рафсона заключается в том, что в методе секущих вводится аппроксимация для второй производной:\n",
+    "$$ f''(x_n) = \\frac{f'(x_n) - f'(x_{n-1})}{x_n - x_{n-1}} $$\n",
+    "\n",
+    "поэтому итерационная формула метода секущих принимает следующий вид:\n",
+    "$$ x_{n+1} = x_n - f'(x_n)\\frac{x_n - x_{n-1}}{f'(x_n)-f'(x_{n-1})} $$\n",
+    "\n",
+    "Как видно из формулы, теперь не требуется, чтобы функция была дифференцируема до второго порядка, но теперь нам нужны две начальные точки. Выбором хорошего начального интервала (начальных точек) мы позволяем алгоритму сходиться к оптимуму. Этот подход может уменьшить скорость сходимости по сравнению с методом Ньютона-Рафсона.\n",
+    "\n",
+    "Алгоритм метода следующий:\n",
     "\n",
     "1. **Начальный выбор:**\n",
     "   - Выбираются две начальные точки $x_0$ и $x_1$, близкие к корню уравнения.\n",
     "\n",
     "2. **Итерационный процесс:**\n",
-    "   - Строится хорда между точками $(x_0, f(x_0))$ и $(x_1, f(x_1))$.\n",
+    "   - Строится хорда между точками $(x_n, f(x_n))$ и $(x_{n+1}, f(x_{n+1}))$.\n",
     "   - Новая аппроксимация корня $x_2$ находится как пересечение хорды с осью $x$.\n",
     "\n",
-    "$$\n",
-    "x_2 = x_1 - \\frac{f(x_1) \\cdot (x_1 - x_0)}{f(x_1) - f(x_0)}\n",
-    "$$\n",
+    "$$ x_{n+1} = x_n - f'(x_n)\\frac{x_n - x_{n-1}}{f'(x_n)-f'(x_{n-1})} $$\n",
     "\n",
     "3. **Обновление:**\n",
     "   - Точки $x_0$ и $x_1$ обновляются: $x_0 = x_1$, $x_1 = x_2$.\n",
