--- a/3_exam/Answers.ipynb
+++ b/3_exam/Answers.ipynb
@@ -407,7 +407,7 @@
    "metadata": {},
    "source": [
     "# 3. Оптимизация с ограничениями типа равенства, методы замены и ограниченные вариации\n",
-    "Введение\n",
+    "### **Введение**\n",
     "\n",
     "В предыдущей главе мы занимались задачей свободной оптимизации, где переменные состояния не были подвергнуты каким-либо ограничениям. В этой главе рассмотрим более реалистичную задачу, где введены ограничения на переменные состояния, причем эти ограничения выражены в виде уравнений. Эти ограничения, как вы увидите далее, обычно являются следствием физических и логических закономерностей, и их наличие существенно влияет на исследование оптимизационной задачи.\n",
     "\n",
@@ -423,7 +423,7 @@
     "\n",
     "В дальнейшем мы рассмотрим четыре метода оптимизации, характерных для этого класса задач: метод подстановки, метод ограниченной вариации, метод множителей Лагранжа.\n",
     "\n",
-    "### Метод замены\n",
+    "### **Метод замены**\n",
     "Первый шаг в применении этого метода - решение системы уравнений ограничений (2) относительно $m$ переменных. Полученные решения затем подставляются в критерий оптимальности (1), что уменьшает размерность до $n - m$ переменных, и критерий оптимальности теперь принимает вид:\n",
     "\n",
     "$$y = y(x_1, x_2, x_3, \\ldots, x_{n-m}) \\tag{3}$$\n",
@@ -455,7 +455,7 @@
     "\n",
     "$$\\frac{\\partial^2 y}{\\partial x_2^2} = 28 > 0, \\text{ точка - минимум}.$$\n",
     "\n",
-    "### Метод ограниченных вариаций\n",
+    "### **Метод ограниченных вариаций**\n",
     "\n",
     "**Вводные замечания**\n",
     "\n",
@@ -550,7 +550,7 @@
    "source": [
     "# 4. Оптимизация с ограничениями типа равенства, метод множителей Лагранжа\n",
     "\n",
-    "**Метод множителей Лагранжа**\n",
+    "### **Метод множителей Лагранжа**\n",
     "\n",
     "Напоминаем, что оптимизационная задача, которую мы решаем, формулируется следующим образом: найти экстремум функции\n",
     "\n",
@@ -719,8 +719,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7. Линейное программирование, графический метод, принципы Simplex метода, Simplex метод\n",
+    "# 7. Линейное программирование, графический метод, принципы Simplex метода, Simplex метод\n",
     "\n",
+    "### TODO\n",
     "\n",
     "---\n"
    ]
@@ -881,6 +882,10 @@
     "\n",
     "$\\gamma$ (шаг обучения): Значение gamma обычно выбирается в диапазоне от 0.1 до 0.9. Если ваш шаг обучения слишком большой, алгоритм может не сойтись, и, наоборот, если слишком мал, сходимость может быть медленной. Попробуйте начать с относительно небольшого значения, например, 0.1, и увеличивайте его, пока алгоритм не начнет сходиться.\n",
     "\n",
+    "## Метод наискорейшего спуска с фиксированным шагом\n",
+    "\n",
+    "### TODO\n",
+    "\n",
     "---\n"
    ]
   },
@@ -894,9 +899,9 @@
     "\n",
     "В методе градиентного спуска с моментом, общая структура алгоритма остается неизменной, но текущая позиция в процессе поиска обновляется немного измененным способом:\n",
     "\n",
-    "$\\mathbf{v}_k = \\omega \\mathbf{v}_{k-1} + \\gamma \\nabla f(\\mathbf{x}_k)$\n",
+    "$$\\mathbf{v}_k = \\omega \\mathbf{v}_{k-1} + \\gamma \\nabla f(\\mathbf{x}_k)$$\n",
     "\n",
-    "$\\mathbf{x}_{k+1} = \\mathbf{x}_{k} - \\mathbf{v}_k$\n",
+    "$$\\mathbf{x}_{k+1} = \\mathbf{x}_{k} - \\mathbf{v}_k$$\n",
     "\n",
     "$\\gamma$ (шаг обучения): Значение gamma обычно выбирается в диапазоне от 0.1 до 0.9. Если ваш шаг обучения слишком большой, алгоритм может не сойтись, и, наоборот, если слишком мал, сходимость может быть медленной. Попробуйте начать с относительно небольшого значения, например, 0.1, и увеличивайте его, пока алгоритм не начнет сходиться.\n",
     "\n",
@@ -907,9 +912,9 @@
     "\n",
     "Основная идея ускоренного градиента Нестерова заключается в том, что градиент вычисляется в будущей точке.\n",
     "\n",
-    "$\\mathbf{x}'_k = \\mathbf{x}_{k-1} - \\omega\\mathbf{v}_{k-1}$\n",
-    "$\\mathbf{v}_k = \\omega \\mathbf{v}_{k-1} + \\gamma \\nabla f(\\mathbf{x}'_k)$ \n",
-    "$\\mathbf{x}_{k+1} = \\mathbf{x}_{k} - \\mathbf{v}_k$\n",
+    "$$\\mathbf{x}'_k = \\mathbf{x}_{k-1} - \\omega\\mathbf{v}_{k-1}$$\n",
+    "$$\\mathbf{v}_k = \\omega \\mathbf{v}_{k-1} + \\gamma \\nabla f(\\mathbf{x}'_k)$$ \n",
+    "$$\\mathbf{x}_{k+1} = \\mathbf{x}_{k} - \\mathbf{v}_k$$\n",
     "Ключевым моментом в ускоренном градиенте Нестерова является то, что градиент вычисляется не в текущей точке, а в предполагаемой будущей точке. Таким образом, мы придаем всей процедуре определенный предсказательный характер, ожидая улучшения ее общего поведения.\n",
     "\n",
     "---\n"
