--- a/3_exam/answers/Answers.ipynb
+++ b/3_exam/answers/Answers.ipynb
@@ -712,6 +712,138 @@
     "\n",
     "Условия Каруша-Куна-Таккера предоставляют важные инсайты для понимания оптимальности в задачах с ограничениями и используются при разработке алгоритмов оптимизации и анализе решений.\n",
     "\n",
+    "\n",
+    "# Метод Каруша-Куна-Такера: Теоретические Основы и Условия\n",
+    "\n",
+    "**Оптимизационные проблемы с ограничениями типа неравенств:**\n",
+    "\n",
+    "Этот раздел также посвящен проблемам оптимизации с ограничениями типа неравенств, то есть поиску экстремумов критерия оптимальности\n",
+    "\n",
+    "$$ y = y(x_1, x_2, \\ldots, x_n), \\quad (1) $$\n",
+    "\n",
+    "если переменные состояния $x_i$ ограничены между собой набором неравенств\n",
+    "\n",
+    "$$ g_k(x_1, x_2, \\ldots, x_n) \\leq 0 \\quad \\text{для} \\ k = 1, 2, \\ldots, m. \\quad (2) $$\n",
+    "\n",
+    "Метод Каруша-Куна-Такера (KKT) естественным образом обобщает метод множителей Лагранжа для решения оптимизационных задач с ограничениями типа неравенств. Обобщение будет двухсторонним: сначала уменьшение размерности при решении, а затем использование знаков множителей Лагранжа для определения характера экстремума.\n",
+    "\n",
+    "Напоминаем, что мы лишь намекнули на эту возможность в последнем примере предыдущего раздела, и теперь мы представим ее в более формальной форме.\n",
+    "\n",
+    "\n",
+    "Для полноты изложения, давайте вспомним метод множителей Лагранжа.\n",
+    "\n",
+    "В случае, когда критерий оптимальности (1) ограничен неравенствами (2) с введением дополнительных переменных ($x_{n+k}$), где\n",
+    "\n",
+    "$$ \\Phi_k = g_k(x_1, x_2, ..., x_n) + x_{2n+k} = 0 \\text{ для } k = 1, 2, ..., m  (3) $$\n",
+    "\n",
+    "Функция Лагранжа имеет следующую форму:\n",
+    "\n",
+    "$$ F = y(x_1, x_2, ..., x_n) + \\sum_{k=1}^{m} \\lambda_k g_k + x_{2n+k} (4)$$   \n",
+    "\n",
+    "Частные производные Лагранжиана по всем переменным дают условия необходимости:\n",
+    "\n",
+    "$$ \\frac{\\partial F}{\\partial x_i} = \\frac{\\partial y(x_i)}{\\partial x_i} + \\sum_{k=1}^{m} \\lambda_k \\frac{\\partial g_k(x_i)}{\\partial x_i} = 0 \\text{ для } i = 1, 2, ..., n (5)$$   \n",
+    "\n",
+    "И для оставшихся $m$ по паразитным переменным $x_{n+k}$, частные производные имеют вид:\n",
+    "\n",
+    "$$ \\frac{\\partial F}{\\partial x_{n+k}} = 2\\lambda_k x_{n+k} = 0 \\text{ для } k = 1, 2, ..., m (6)$$   \n",
+    "\n",
+    "Давайте рассмотрим три возможных решения выражения (6):\n",
+    "\n",
+    "1. $ \\lambda_k = 0 $ и $ x_{n+k} \\neq 0 $\n",
+    "   Из (3) логично следует, что решение находится в области $g_k = -x_{n+k} < 0$.\n",
+    "\n",
+    "2. $ \\lambda_k \\neq 0 $ и $ x_{n+k} = 0 $\n",
+    "   Из (3) следует, что решение находится на границе $g_k = 0$.\n",
+    "\n",
+    "3. $ \\lambda_k = 0 $ и $ x_{n+k} = 0 $\n",
+    "   Из (3) следует, что решение также находится на границе $g_k = 0$.\n",
+    "\n",
+    "Рассматривая эти три возможных решения, легко заметить следующую закономерность. Если дополнительная переменная равна нулю ($x_{n+k} = 0$), то решение находится на границе, то есть $g_k = 0$. Практически это означает, что выражение (6) математически эквивалентно выражению\n",
+    "\n",
+    "$$ \\lambda_k g_k = 0 \\text{ для } k = 1, 2, ..., m (7)$$   \n",
+    "\n",
+    "Если мы примем факт, что выражения (6) и (7) математически эквивалентны, и учитывая, что дополнительные переменные $x_{n+k}$ не участвуют в других необходимых условиях (5), у нас есть возможность полностью исключить эти паразитарные переменные $x_{n+k}$ и тем самым уменьшить размерность нашей проблемы. Заметьте, что это не означает, что эти переменные формально не существуют (согласно (3)), но мы можем исключить их при решении нашей оптимизационной задачи, заменяя уравнение $ \\lambda_k x_{n+k} = 0 $ эквивалентным $ \\lambda_k g_k = 0 $. Это изменение будет явно показано в алгоритме, который мы представим в конце этой главы.\n",
+    "\n",
+    "В дальнейшем тексте мы постараемся установить связь между характером экстремума и знаками множителей Лагранжа. Напоминаем, что мы указали на эту связь в примере в конце предыдущей главы, но без формальных доказательств.\n",
+    "\n",
+    "Начнем наше изучение с предположения, что критерий оптимальности $y(x_i)$ зависит от $n$ переменных состояния:\n",
+    "\n",
+    "$$ y = y(x_1, x_2, ..., x_n) (8)$$   \n",
+    "\n",
+    "Но с единственным ограничением типа неравенства:\n",
+    "\n",
+    "$$ g(x_1, x_2, ..., x_n) \\leq 0 (9)$$   \n",
+    "\n",
+    "Поскольку мы исследуем связь между знаком $\\lambda_i$ и характером решения, мы предположили, что в точке экстремума $x^*$, $\\lambda > 0$. В этом случае, если мы рассмотрим уравнения (6) и (7), дополнительная переменная $x_{n+1}$ должна быть равна нулю, что означает, что решение находится на границе. Теперь Лагранжиан (4) в нашем случае с одним ограничением и с $x_{n+1} = 0$ записывается в следующей форме:\n",
+    "\n",
+    "$$ F = y(x_1, x_2, ..., x_n) + \\lambda g(x_1, x_2, ..., x_n) (10)$$   \n",
+    "\n",
+    "Из необходимых условий экстремума (5) мы знаем, что в точке $x^*$ выполняются следующие отношения:\n",
+    "\n",
+    "$$ \\frac{\\partial F}{\\partial x_i} = \\frac{\\partial y}{\\partial x_i} + \\lambda \\frac{\\partial g}{\\partial x_i} = 0 \\text{ для } i = 1, 2, ..., n (11)$$   \n",
+    "\n",
+    "То есть в точке $x^*$ имеет место:\n",
+    "\n",
+    "$$ \\frac{\\partial y}{\\partial x_i} = -\\lambda \\frac{\\partial g}{\\partial x_i} \\text{ для } i = 1, 2, ..., n (12)$$   \n",
+    "\n",
+    "Предыдущее выражение (12) можно записать и так:\n",
+    "\n",
+    "$$ \\sum_{i=1}^{n} \\frac{\\partial y}{\\partial x_i} \\,dx_i = -\\lambda \\sum_{i=1}^{n} \\frac{\\partial g}{\\partial x_i} \\,dx_i (13)$$   \n",
+    "\n",
+    "или как\n",
+    "\n",
+    "$$ dy = -\\lambda \\,dg (14)$$   \n",
+    "\n",
+    "Где $dy$ и $dg$ - это приращения функций $y$ и $g$ соответственно, для допустимых изменений $dx_i$. Мы утверждаем, что для предполагаемого значения множителя Лагранжа $\\lambda > 0$ решение будет в минимуме. Это мы попытаемся проиллюстрировать графически, см. рисунок 1. Из очевидных причин мы ограничим это исследование только двумя переменными состояния $x_1$ и $x_2$.\n",
+    "\n",
+    "На основе анализа рисунка 1 легко заключить, что из точки экстремума $x^*$ допустимы только приращения $dg \\leq 0$. Если мы введем это значение в выражение (14) при условии, что $\\lambda > 0$, легко вычислить, что тогда приращение $dy \\geq 0$, то есть из точки экстремума значение функции $y$ не убывает, или что в точке $x^*$ функция (8) имеет минимум.\n",
+    "\n",
+    "Рассмотренные в этой главе соображения мы попытаемся формализовать в алгоритме для решения задач оптимизации с ограничениями типа неравенств, опираясь на метод Каруша-Куна-Такера.\n",
+    "\n",
+    "Критерий оптимальности зависит от $n$ переменных состояния:\n",
+    "\n",
+    "$$ y = y(x_1, x_2, ..., x_n) (15)$$   \n",
+    "\n",
+    "где переменные состояния $x_i$ взаимно ограничены набором неравенств:\n",
+    "\n",
+    "$$ g_k(x_1, x_2, ..., x_n) \\leq 0 \\text{ для } k = 1, 2, ..., m (16)$$   \n",
+    "\n",
+    "<div style=\"text-align: center;\">\n",
+    "    <img src=\"KarushKunTaker1.png\" alt=\"Изображение 1\" />\n",
+    "    <p style=\"text-align: center;\">\n",
+    "        <strong>Изображение 1:</strong><br>\n",
+    "    </p>\n",
+    "</div>\n",
+    "\n",
+    "На графике кругом представлено ограничение $ g \\leq 0 $, где допустимые значения находятся внутри круга $g < 0$ и на самом круге $g = 0$. Предполагая, что $\\lambda > 0$, мы гарантируем, что экстремум $x^*$ находится на самом круге (серая точка на рисунке). Из этой точки разрешены движения внутрь круга $dg < 0$, то есть $g + dg < 0$ (зеленые стрелки), а также оставание на самом круге $dg = 0$, то есть $g + dg = 0$ (желтые стрелки). Движения вне круга не допускаются $dg > 0$, то есть $g + dg > 0$ (бордовые стрелки). Вывод заключается в том, что из точки экстремума на границе допускаются все приращения $dg$, удовлетворяющие условию $dg \\leq 0$.\n",
+    "\n",
+    "\n",
+    "При обычном предположении о дифференцируемости рассматриваемых функций, формализм можно представить следующим образом.\n",
+    "\n",
+    "1. Сформировать расширенный критерий оптимальности $F$ в форме Лагранжиана, без дополнительных переменных $x_{n+k}$:\n",
+    "\n",
+    "$$ F = y(x_1, x_2, ..., x_n) + \\sum_{k=1}^{m} \\lambda_k g_k(x_1, x_2, ..., x_n) (17)$$   \n",
+    "\n",
+    "   Как мы показали в начале этой главы, дополнительные переменные существуют только в выражениях (6) и их можно успешно заменить эквивалентным выражением (7). Введение дополнительных переменных на этом этапе было бы формальной ошибкой.\n",
+    "\n",
+    "2. Частные производные по всем оригинальным переменным должны быть равны нулю:\n",
+    "\n",
+    "$$ \\frac{\\partial F}{\\partial x_i} = \\frac{\\partial y(x_i)}{\\partial x_i} + \\sum_{k=1}^{m} \\lambda_k \\frac{\\partial g_k(x_i)}{\\partial x_i} = 0 \\text{ для } i = 1, 2, ..., n (18)$$   \n",
+    "\n",
+    "3. Следующее уравнение представляет замену выражения (6) в соответствии с принципами, которые мы ранее приняли:\n",
+    "\n",
+    "$$ \\lambda_k g_k = 0 \\text{ для } k = 1, 2, ..., m (19)$$   \n",
+    "\n",
+    "4. Следующим шагом будет решение системы уравнений (18)-(19) и проверка выполнения ограничений (16).\n",
+    "\n",
+    "5. На основе вычисленных значений множителей Лагранжа мы обсудим характер экстремума в соответствии с установленными принципами:\n",
+    "   - (a) Если значения $\\lambda_k \\geq 0$, то точка является минимумом.\n",
+    "   - (b) Если значения $\\lambda_k \\leq 0$, то точка является максимумом.\n",
+    "   - (c) Во всех остальных случаях это точка перегиба.\n",
+    "\n",
+    "   Заметьте, что условие $\\lambda_k \\geq 0$ означает, что хотя бы одно значение множителя Лагранжа отлично от нуля и больше нуля. Аналогично и для случая максимума.\n",
+    "\n",
     "---\n"
    ]
   },
@@ -721,7 +853,14 @@
    "source": [
     "# 7. Линейное программирование, графический метод, принципы Simplex метода, Simplex метод\n",
     "\n",
-    "### TODO\n",
+    "См. документ SimplexMethod.pdf\n",
+    "\n",
+    "https://habr.com/ru/articles/474286/\n",
+    "\n",
+    "https://www.youtube.com/watch?v=Y0m4hVQztD4\n",
+    "\n",
+    "В душе не ебу, что сюда писать\n",
+    "\n",
     "\n",
     "---\n"
    ]
@@ -882,9 +1021,18 @@
     "\n",
     "$\\gamma$ (шаг обучения): Значение gamma обычно выбирается в диапазоне от 0.1 до 0.9. Если ваш шаг обучения слишком большой, алгоритм может не сойтись, и, наоборот, если слишком мал, сходимость может быть медленной. Попробуйте начать с относительно небольшого значения, например, 0.1, и увеличивайте его, пока алгоритм не начнет сходиться.\n",
     "\n",
-    "## Метод наискорейшего спуска с фиксированным шагом\n",
+    "## **Метод наискорейшего спуска с фиксированным шагом:**\n",
     "\n",
-    "### TODO\n",
+    "Метод наискорейшего спуска является одним из методов оптимизации, используемым для поиска локального минимума функции. Он основан на итеративном движении в направлении наибольшего убывания функции.\n",
+    "\n",
+    "Для заданной функции $ f(x) $ и начального приближения $ x_0 $, метод наискорейшего спуска обновляет приближение по следующей формуле:\n",
+    "\n",
+    "$$ x_{k+1} = x_k - \\alpha \\nabla f(x_k) $$\n",
+    "\n",
+    "где $ \\nabla f(x_k) $ - градиент функции в точке $ x_k $, а $ \\alpha $ - фиксированный шаг (величина, которую выбирают заранее).\n",
+    "\n",
+    "Этот метод широко используется из-за своей простоты реализации, но выбор фиксированного шага ($ \\alpha $) может повлиять на эффективность метода. В случае слишком большого шага метод может расходиться, а слишком малого - сойтись медленно.\n",
+    "\n",
     "\n",
     "---\n"
    ]
@@ -982,7 +1130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "13. Принципы оптимизации на основе генетического алгоритма. Описание реализации алгоритма с бинарно закодированными особями.\n",
+    "# 13. Принципы оптимизации на основе генетического алгоритма. Описание реализации алгоритма с бинарно закодированными особями.\n",
     "\n",
     "\n",
     "---\n",
@@ -993,7 +1141,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "14. Принципы оптимизации на основе генетического алгоритма. Описание реализации алгоритма с вещественно закодированными особями.\n",
+    "# 14. Принципы оптимизации на основе генетического алгоритма. Описание реализации алгоритма с вещественно закодированными особями.\n",
     "\n",
     "\n",
     "---\n"
@@ -1003,7 +1151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "15. Принципы оптимизации на основе PSO алгоритма\n",
+    "# 15. Принципы оптимизации на основе PSO алгоритма\n",
     "\n",
     "\n",
     "---\n"
